--- a/l10n/de/bav.po
+++ b/l10n/de/bav.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: bav\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-19 02:37+0100\n"
-"PO-Revision-Date: 2014-11-19 02:40+0100\n"
+"PO-Revision-Date: 2014-11-19 02:53+0100\n"
 "Last-Translator: Claus-Justus Heine <himself@claus-justus-heine.de>\n"
 "Language-Team: German\n"
 "Language: de\n"
@@ -48,7 +48,7 @@ msgstr ""
 
 #: js/script.js:24
 msgid "Bank Account Validator"
-msgstr " ?>"
+msgstr "Bankkonto Validierung (DE)"
 
 #: templates/main.php:14
 msgid "IBAN"
