--- a/l10n/templates/bav.pot
+++ b/l10n/templates/bav.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-02-20 23:12+0100\n"
+"POT-Creation-Date: 2015-02-22 14:04+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,12 +64,42 @@ msgstr ""
 msgid "BAV - Bank Account Validator (DE)"
 msgstr ""
 
-#: js/script.js:34
+#: js/script.js:37
 msgid "Clear"
 msgstr ""
 
-#: js/script.js:36
+#: js/script.js:39
 msgid "Clear all fields of the input form"
+msgstr ""
+
+#: js/script.js:53
+msgid "About"
+msgstr ""
+
+#: js/script.js:55
+msgid "Opens a window which tells you what this is."
+msgstr ""
+
+#: js/script.js:59
+msgid "This is a mere front-end to"
+msgstr ""
+
+#: js/script.js:69
+msgid ""
+"Data entered will not be stored. BAV is able to compute the BIC given the "
+"bank-id, and to compute the IBAN given additionally the bank-account id. "
+"Additionally, it verifies that the bank-id exists by comparing with the data "
+"provided by the Deutsche Bundesbank. It will also pick the correct check-sum "
+"formula for the given bank-account id (there are a few hundret possible "
+"check-sum formulas, differing from bank to bank). Finally, given an IBAN, it "
+"will extract the bank-id and bank-account-id and also perform the check-sum "
+"computations in order to test whether the provided bank-account data is "
+"consistent. Please keep in mind that check-sums cannot catch all possible "
+"errors."
+msgstr ""
+
+#: js/script.js:81
+msgid "About BAV"
 msgstr ""
 
 #: templates/main.php:14
