--- a/l10n/de/bav.po
+++ b/l10n/de/bav.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: bav\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-02-22 14:03+0100\n"
-"PO-Revision-Date: 2015-07-15 19:52+0200\n"
+"PO-Revision-Date: 2016-01-01 02:06+0100\n"
 "Last-Translator: Claus-Justus Heine <himself@claus-justus-heine.de>\n"
 "Language-Team: German\n"
 "Language: de\n"
@@ -105,12 +105,13 @@ msgstr ""
 "der BLZ berechnen, und außerdem die IBAN, wenn zusätzlich die\n"
 "Kontonummer angegeben wird. Ferner wird überprüft, ob die angegebene\n"
 "BLZ bei der Deutschen Bundesbank hinterlegt ist (also ob die\n"
-"existiert). Außerdem wird mit der passenden Prüfsummen-Formel getestet, ob\n"
-"die Kontonummer stimmt (es gibt ein paar Dutzend Prüfsummen-Formeln,\n"
-"die von Bank zu Bank variieren). Schließlich kann aus einer gegebenen\n"
-"IBAN die BLZ und die Kontonummer extrahiert werden wiederum mittels\n"
-"der individuellen Prüfsummen verifiziert werden. Bitte beachte, dass\n"
-"Prüfsummen nicht jeden Fehler finden können."
+"existiert). Außerdem wird mit der passenden Prüfsummen-Formel\n"
+"getestet, ob die Kontonummer stimmt (es gibt ein paar Dutzend\n"
+"Prüfsummen-Formeln, die von Bank zu Bank variieren). Schließlich kann\n"
+"aus einer gegebenen IBAN die BLZ und die Kontonummer extrahiert werden\n"
+"und wiederum mittels der individuellen Prüfsummen verifiziert\n"
+"werden. Bitte beachte, dass Prüfsummen nicht jeden Fehler finden\n"
+"können."
 
 #: js/script.js:81
 msgid "About BAV"
